discussion/kv_engine/160420/160420_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

toybuild: return to caller block cache hit/miss

Change-Id: If35d94894ede88f4b7d266d9e6653ed029e04a13

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Rohan Suri
Date: 2021-08-31 16:44:14.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-08-31 16:54:58.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39263/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/defragmenter.cc(105): error C2664: "void cb::_ArenaMalloc<cb::JEArenaMalloc>::switchToClient(const cb::ArenaMallocClient &,cb::MemoryDomain,bool)": cannot convert argument 2 from "bool" to "cb::MemoryDomain" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39263/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11849/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:460:28: error: no member named "WALSyncTime" in "magma::Magma::Config" [clang-diagnostic-error]
    configuration.magmaCfg.WALSyncTime = 0ms;
                           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11849/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:460:28:
error: no member named "WALSyncTime" in "magma::Magma::Config" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11849/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33436/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/defragmenter.cc:106:37:
error: cannot initialize a parameter of type "cb::MemoryDomain" with an rvalue of type "bool"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33436/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1491/ : FAILURE

Compile error at [2021-08-31T16:47:18.003Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:460:28:
error: no member named "WALSyncTime" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1491/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13459/ : FAILURE

Compile error at [2021-08-31T16:46:29.495Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/defragmenter.cc:106:37:
error: cannot convert ?bool? to ?cb::MemoryDomain?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13459/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14117/ : FAILURE

Compile error at [2021-08-31T16:46:07.326Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:460:28:
error: no member named "WALSyncTime" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14117/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13693/ : FAILURE

Compile error at [2021-08-31T16:46:43.822Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:460:28:
error: ?struct magma::Magma::Config? has no member named ?WALSyncTime?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13693/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12605/ : FAILURE

Compile error at [2021-08-31T16:47:45.043Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:460:28:
error: no member named "WALSyncTime" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12605/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21624/ : FAILURE

Compile error at [2021-08-31T16:47:58.763Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:460:28:
error: no member named "WALSyncTime" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21624/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1507/ : FAILURE

Compile error at [2021-08-31T16:53:01.113Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:460:28:
error: ?struct magma::Magma::Config? has no member named ?WALSyncTime?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1507/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/10632/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
